<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mss.jav.getsdectec.MainActivity">

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/tv_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_ip"
        app:layout_constraintBottom_toTopOf="@+id/et_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_port"
        app:layout_constraintBottom_toTopOf="@+id/tv_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ip" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="Open"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_pala" />


    <TextView
        android:id="@+id/tv_1"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="2dp"
        android:text="@string/tv_1"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_data"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="258dp" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_1"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        tools:layout_editor_absoluteY="258dp" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_3"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_1"
        app:layout_constraintStart_toEndOf="@+id/tv_2"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_4"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_1"
        app:layout_constraintStart_toEndOf="@+id/tv_3"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_5"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_1"
        app:layout_constraintStart_toEndOf="@+id/tv_4"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/tv_6"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_6"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_1"
        app:layout_constraintStart_toEndOf="@+id/tv_5"
        tools:layout_editor_absoluteY="207dp" />

    <ImageView
        android:id="@+id/iv_pala"
        android:layout_width="320dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_4"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>
